--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "forex-sentiment-tracker-beta",
   "version": "1.0.0",
@@ -11,6 +10,9 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typescript": "^5.4.2",
+    "@types/react": "^18.2.14",
+    "@types/node": "^20.11.0"
   }
 }
