--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "typescript": "^5.4.2",
     "@types/react": "^18.2.14",
     "@types/node": "^20.11.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2",
+    "postcss": "^8.4.24",
+    "autoprefixer": "^10.4.14"
   }
 }
